overflow issue in col 7 fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,46 +9,46 @@ a {
 }
 
 .clearfix {
-  clear: both;
+    clear: both;
 }
 
 .protograph-card {
-  position: relative;
-  overflow: hidden;
-  letter-spacing: normal;
-  box-sizing: border-box;
+    position: relative;
+    overflow: hidden;
+    letter-spacing: normal;
+    box-sizing: border-box;
 }
 
 .protograph-col4-mode {
-  width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .protograph-col7-mode {
-  width: 540px;
-  margin-left: auto;
-  margin-right: auto;
+    width: 540px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .lcw-card {
-  width: 540px;
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  padding: 16px;
-  font-family: "cabin";
-  height: 580px;
-  border-radius: 4px;
-  border: 1px solid #efefef;
+    width: 540px;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    padding: 16px;
+    font-family: "cabin";
+    height: 580px;
+    border-radius: 4px;
+    border: 1px solid #efefef;
 }
 
 .lcw-card .card-title {
-  font-size: 20px;
-  font-weight: bold;
-  color: #333;
-  font-family: "bitter";
-  line-height: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+    font-family: "bitter";
+    line-height: 30px;
 }
 
 .lcw-card .card-tabs {
@@ -75,6 +75,17 @@ a {
 .lcw-card .single-tab.active {
     border-bottom: 2px solid #FAA10C;
     color: #FAA10C;
+}
+
+.card-content {
+    height: 361px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+}
+
+.card-content::-webkit-scrollbar {
+    width: 0 !important
 }
 
 .lcw-card p {
@@ -175,11 +186,11 @@ a:active {
 }
 
 .tabContent {
-  height: 370px;
-  overflow-y: scroll;
-  -ms-overflow-style: none;
-  overflow: -moz-scrollbars-none;
-  width: 280px;
+    height: 370px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
+    width: 280px;
 }
 
 .tabContent::-webkit-scrollbar {
@@ -195,4 +206,6 @@ a:active {
     margin-bottom: 8px;
     width: 280px;
 }
+
+
 /* Note the above height and width are just samples. Change it as per the usecase. */
